Fix z-index and dice/card select

--- a/frontend/src/features/Game/ui/GameDiceModal/GameDiceModal.module.scss
+++ b/frontend/src/features/Game/ui/GameDiceModal/GameDiceModal.module.scss
@@ -23,6 +23,7 @@
 
 .background {
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
