--- a/frontend/src/features/Game/ui/GameTable/GameTable.module.scss
+++ b/frontend/src/features/Game/ui/GameTable/GameTable.module.scss
@@ -8,8 +8,10 @@
   gap: 100px;
   position: relative;
 }
+
 .background {
   position: absolute;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
